# rust-rocket-api

./: .gitignore  Cargo.toml  README.md
.insomnia/Environment/: env_8dc9217eb3d1d5f5b488da6585bf7a2815b0ef3d.yml
.insomnia/Request/: req_025a7ab4376e4f388879e605c27e9532.yml  req_092209ffa678403596fa8e101d0fdfdf.yml  req_110c0af4e78842d2bae217a5a80395d1.yml  req_1379344d41cd4604b7cf393196d0694f.yml  req_2d3956ebbdb74481b7a3fa844d2dd1fa.yml  req_54e700bb8405424492da2f83c088dd36.yml  req_59599ffe29ee4e99bcfe34ba2fadae88.yml  req_6b3917d8f1984e2591c6be052b98011b.yml  req_785aff685ec64977bafa000930a30cef.yml  req_a8a92e9539d44f8b84b3461fbba44e5c.yml  req_fbc961b351e843858f9f45e6bd6b3552.yml
.insomnia/RequestGroup/: fld_1d4ab0db5fc445989c0673f28bec7c18.yml  fld_87e29818cd9740a79db689a2ccd5f684.yml
.insomnia/Workspace/: wrk_6cd1cbb178e34e71a2257d83aa1c377f.yml
src/: main.rs
src/api/: mod.rs  person_api.rs  rocket_api.rs
src/database/: db.rs  mod.rs
src/model/: mod.rs  person_model.rs  rocket_model.rs
src/repository/: mod.rs  person_repo.rs  rocket_repo.rs
