[package]
name = "rust-rocket-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = { version = "2.7.1", features = [ "sync" ], default-features = false }
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
tokio = { version = "1.34.0", features = [ "full" ] }
